--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -1,5 +1,33 @@
-# Generator: List (a literal list with elements, e.g cluster name and ip), Cluster (ensure new clusters are defined within argocd)
+# Generator: List (a literal list with elements, e.g cluster name and ip), Cluster (you ensure that new clusters are defined within argocd cluster list)
 # Git Generator: json file in git is edited and generators are updated
 # With generator we can generate parameters to be substituted in applications
-# Used for add-ons and deploying applications to multiple clusters
-
+#    The purpose of the Generator is to target argocd applications to clusters
+# Application controller is Used for add-ons and deploying applications to multiple clusters
+# Argocd Controller create/update/delete Application resource, 
+# takes ApplicationSet resource as input, and outputting one or more Argo CD Application resources
+# Application's k8s resources are created by argocd as defined in spec field
+apiVersion: argoproj.io/v1alpha1
+kind: ApplicationSet
+metadata:
+  name: guestbook
+spec:
+  generators:
+  - list:
+      elements:
+      - cluster: engineering-dev
+        url: https://kubernetes.default.svc
+#     - cluster: engineering-prod
+#       url: https://kubernetes.default.svc
+#       foo: bar
+  template:
+    metadata:
+      name: '{{cluster}}-guestbook'
+    spec:
+      project: default
+      source:
+        repoURL: https://github.com/argoproj/applicationset.git
+        targetRevision: HEAD
+        path: examples/list-generator/guestbook/{{cluster}}
+      destination:
+        server: '{{url}}'
+        namespace: guestbook
