--- a/argocd/applicationset.yaml
+++ b/argocd/applicationset.yaml
@@ -1,8 +1,8 @@
 # Generator: List (a literal list with elements, e.g cluster name and ip), Cluster (you ensure that new clusters are defined within argocd cluster list)
 # Git Generator: json file in git is edited and generators are updated
 # With generator we can generate parameters to be substituted in applications
-#    The purpose of the Generator is to target argocd applications to clusters
-# Application controller is Used for add-ons and deploying applications to multiple clusters
+# "The purpose of the Generator is to target argocd applications to clusters and different environments"
+# ApplicationSet controller is Used for add-ons and deploying applications to multiple clusters
 # Argocd Controller create/update/delete Application resource, 
 # takes ApplicationSet resource as input, and outputting one or more Argo CD Application resources
 # Application's k8s resources are created by argocd as defined in spec field
