--- a/externalSecret.yaml
+++ b/externalSecret.yaml
@@ -1,3 +1,5 @@
+# The External Secrets Operator runs as a deployment in your cluster with elevated privileges. 
+# It will create/read/update secrets in all namespaces and has access to secrets stored in some external API.
 # External Secret fetches secrets from AWS and injects in K8s secrets
 # ESO uses SecretStore, ClusterSecretStore, ExternalSecret to fetch and manage secrets
 #  SecretStore resource provides access/authentication, The ExternalSecret specifies what to fetch, the SecretStore specifies how to access.
@@ -20,7 +22,7 @@ spec:
             name: awssm-secret
             key: secret-access-key
 ---
-# An ExternalSecret declares what data to fetch. It has a reference to a SecretStore which knows how to access that data.
+# An ExternalSecret declares what data to fetch. It has a reference to a SecretStore (using secretStoreRef) which knows how to access that data.
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
