auth in SecretStore template

--- a/externalsecrets/externalSecret.yaml
+++ b/externalsecrets/externalSecret.yaml
@@ -13,7 +13,7 @@ spec:
     aws:
       service: SecretsManager
       region: us-east-1
-      auth:
+      auth: # This is where you provide the access key and secret access key which are stored as a kubernetes secret already
         secretRef:
           accessKeyIDSecretRef:
             name: awssm-secret
