--- a/externalsecrets/externalSecret.yaml
+++ b/externalsecrets/externalSecret.yaml
@@ -2,8 +2,9 @@
 # It will create/read/update secrets in all namespaces and has access to secrets stored in some external API.
 # External Secret fetches secrets from AWS and injects in K8s secrets
 # ESO uses SecretStore, ClusterSecretStore, ExternalSecret to fetch and manage secrets
-#  SecretStore resource provides access/authentication, The ExternalSecret specifies what to fetch, the SecretStore specifies how to access.
-# SecretStore is namespaced
+#  SecretStore resource provides access/authentication (access and secret access key from secrets), 
+# The ExternalSecret specifies what to fetch, the SecretStore specifies how to access.SecretStore is namespaced
+# 
 apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
@@ -44,3 +45,37 @@ spec:
   dataFrom:
   - extract:
       key: remote-key-in-the-provider
+
+# Example
+# Json information stored in secret manager
+{
+  "name": {"first": "Tom", "last": "Anderson"},
+  "friends": [
+    {"first": "Dale", "last": "Murphy"},
+    {"first": "Roger", "last": "Craig"},
+    {"first": "Jane", "last": "Murphy"}
+  ]
+}
+---
+# ExrternalSecret for fetching the above values 
+apiVersion: external-secrets.io/v1beta1
+kind: ExternalSecret
+metadata:
+  name: example
+spec:
+  refreshInterval: 1m
+  secretStoreRef:
+    name: aws-secretsmanager
+    kind: SecretStore
+  target:
+    name: friends
+    creationPolicy: Owner
+    data:
+    - secretKey: my_name
+      remoteRef:
+        key: friendslist
+        property: name.first # Tom
+    - secretKey: first_friend
+      remoteRef:
+        key: friendslist
+        property: friends.1.first # Roger
