pod_defination updated

--- a/externalsecrets/externalSecret.yaml
+++ b/externalsecrets/externalSecret.yaml
@@ -2,7 +2,7 @@
 # It will create/read/update secrets in all namespaces and has access to secrets stored in some external API.
 # External Secret fetches secrets from AWS and injects in K8s secrets
 # ESO uses SecretStore, ClusterSecretStore, ExternalSecret to fetch and manage secrets
-#  SecretStore resource provides access/authentication (access and secret access key from secrets), 
+# SecretStore resource provides access/authentication (takes access and secret access key from k8s secrets), 
 # The ExternalSecret specifies what to fetch, the SecretStore specifies how to access.SecretStore is namespaced
 # 
 apiVersion: external-secrets.io/v1beta1
