--- a/pod_definition.yaml
+++ b/pod_definition.yaml
@@ -1,4 +1,9 @@
-# usually pods are created using workload resources (deployments)
+# The shared context of a Pod is a set of Linux namespaces, cgroups, and potentially other facets of isolation - the same things that isolate a container.
+# Containers in Pod share storage (filesystem volumes) and network resources
+# Pods support multiple cooperating processes (as containers), these containers can share resources, dependencies and communicate with one another.
+# usually pods are created using workload resources (deployments or job or statefulSet, DaemonSet) and their controller, controller uses PodTemplate to create pods
+# 
+# 
 apiVersion: batch/v1
 kind: Job
 metadata:
