--- a/requestsLimits.yaml
+++ b/requestsLimits.yaml
@@ -13,4 +13,29 @@
 
 # In case a container tries to use more memory than its limit, container runtime takes the action 
 # and kernal terminates that process with OUT OF MEMORY (OOM) error.
-# 
+
+# Sample
+apiVersion: v1
+kind: Pod
+metadata:
+  name: frontend
+spec:
+  containers:
+  - name: app
+    image: images.my-company.example/app:v4
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
+  - name: log-aggregator
+    image: images.my-company.example/log-aggregator:v6
+    resources:
+      requests:
+        memory: "64Mi"
+        cpu: "250m"
+      limits:
+        memory: "128Mi"
+        cpu: "500m"
