--- a/LoadBalancerController/appLoadBalancerController.yaml
+++ b/LoadBalancerController/appLoadBalancerController.yaml
@@ -2,6 +2,7 @@
 # resources whenever a Kubernetes ingress resource is created on the cluster with 
 # the "kubernetes.io/ingress.class: alb" annotation.
 
+# Ingress Annotations
 # To share an application load balancer across multiple service resources use IngressGroups with the following annotation:
 # Use the same ingressGroup to share the same ALB
 # alb.ingress.kubernetes.io/group.name: my-group
