--- a/kustomization.yml
+++ b/kustomization.yml
@@ -1,3 +1,17 @@
+# configMapGenerator and secretGenerator create k8s configMap and secret from files or literals.
+# application.properties file can be used in kustomization file directly
+
+# cat <<EOF >application.properties
+# FOO=Bar
+# EOF
+
+# cat <<EOF >./kustomization.yaml
+# configMapGenerator:
+# - name: example-configmap-1
+#   files:
+#   - application.properties
+# EOF
+
 apiVersion: kustomize.conifg.k8s.io/v1beta1
 kind: Kustomization
 resources:
